--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ importlib-metadata = "^4.11.1"
 mypy = "1.4.1"
 nox = "^2023.4.22"
 nox-poetry = "^1.0.2"
+packaging = ">=23.1"
+pg8000 = ">=1.30.1"
+psycopg2 = ">=2.9.7"
 pytest = "^7.2"
 pytest-asyncio = ">=0.20.3,<0.22.0"
 pytest-codspeed = "^2.0.1"
@@ -57,6 +60,7 @@ pytest-cov = "^4.0.0"
 pytest-emoji = "^0.2.0"
 pytest-mypy-plugins = ">=1.10,<4.0"
 setuptools = ">=67.8.0"
+"testing.postgresql" = ">=1.3"
 
 [tool.black]
 line-length = 88
